<resources>
    <string name="app_name">Spunn</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_a_member">Not a member ?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="register"><u>REGISTER</u></string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Full Name</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="Phno">Phone</string>

    <array name="Roles">
        <item>Owner</item>
        <item>Renter</item>
    </array>

    <array name="period">
        <item>Monthly</item>
        <item>Yearly</item>
    </array>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile Name</string>
    <string name="nav_header_subtitle">email.address@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About Developer</string>
    <string name="rs_sign">₹</string>
    <string name="title_activity_signup">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maindashboard">Maindashboard</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_register">Register</string>

    <string name="pstprty"><u>Post your property here</u></string>
    <string name="newway"><b><u>new way to find home</u></b></string>
    <!--for cities-->
    <string-array name="cities">

        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>
        <item>Alappuzha Beach</item>
        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Araku valley</item>
        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Chennai Beaches</item>
        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Corbett National Park</item>
        <item>Cotigao Wild Life Sanctuary</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>
        <item>Dudhwa National Park</item>
        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Gir Wildlife Sanctuary</item>
        <item>Goa</item>
        <item>Great Himalayan National Park</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>
        <item>Kanha National Park</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Keoladeoghana National Park</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>
        <item>Kottakkal and Ayurveda</item>
        <item>Kovalam</item>
        <item>Kovalam and Ayurveda</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>
        <item>Kumarakom and Ayurveda</item>
        <item>Kumarakom Bird Sanctuary</item>
        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>
        <item>Malpe Beach</item>
        <item>Manas National Park</item>
        <item>Mangalore</item>
        <item>Maravanthe Beach</item>
        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>
        <item>Nanda Devi National Park</item>
        <item>Nandi Hills</item>
        <item>Netravali Wild Life Sanctuary</item>
        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>
        <item>Periyar Wildlife Sanctuary</item>
        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>
        <item>Rajaji National Park</item>
        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>
        <item>Ranganthittu Bird Sanctuary</item>
        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>
        <item>Sariska Wildlife Sanctuary</item>
        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vaishali</item>
        <item>Valley of Flowers</item>
        <item>Varanasi</item>
        <item>Varkala and Ayurveda</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>
        <item>Wayanad Wildlife Sanctuary</item>
        <item>Yercaud</item>
        <item>Zanskar</item>
    </string-array>
    <string name="title_activity_exit">exit</string>
    <string name="title_activity_flat">flat</string>
</resources>