<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical"
    tools:context=".Register">
    <ImageView
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_paomedia_small_n_flat_house"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aclonica"
        android:text="Register here"
        android:textColor="#FFC107"
        android:textSize="24sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:drawableLeft="@drawable/username"
        android:drawableStart="@drawable/username"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableLeft="@drawable/username"
        android:drawableStart="@drawable/username"
        android:textSize="20sp"

        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Phno"
        android:textColorHint="@color/white"
        android:inputType="textPhonetic"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:textSize="20sp"
        android:gravity=""
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColorHint="@color/white"

        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:drawableStart="@drawable/password" />

    <EditText
        android:id="@+id/cnfrmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:fontFamily="@font/audiowide"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/password"/>



    <Button
        android:id="@+id/btnreg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"

        android:background="@color/white"
        android:paddingTop="10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/register"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="#FFAA00"
            android:fontFamily="@font/aclonica"
            />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_here"
            android:textSize="18sp"
            android:textColor="#FFAA00"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aclonica"

            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>


</LinearLayout>