<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_paomedia_small_n_flat_house"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"

        android:fontFamily="@font/aclonica"
        android:text="Sign in here"
        android:textColor="#FFC107"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/prompt_email"
        android:background="@color/black"
        android:drawableStart="@drawable/email"
        android:fontFamily="@font/audiowide"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:gravity="center"

        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/audiowide"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/password"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:padding="10dp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:textColorHint="@color/white"

            android:inputType="textPassword"
            />



    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="185dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"

        android:background="@color/white"
        android:paddingTop="10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/sign_in"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="45dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/not_a_member"
            android:textColor="#FFAA00"
            android:textSize="18sp"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:fontFamily="@font/aclonica"
            android:textColor="#FFAA00"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>



</LinearLayout>